feat(examples): add LCD Keypad Shield, Pomodoro example, and .env WiFi credential export
Adds analogRead/millis/micros/delayMicroseconds intrinsics to CortexM4AsmBackend
needed by the new LcdKeypadShield API and the Pomodoro example. The
juno-maven-plugin env goal now reads a git-ignored .env file and exports its
values into the real process environment (instead of generating a
WifiCredentials class), so examples keep using the same System.getenv(...)
reads Juno already resolves at compile time.